# SpeechScribe

./: .gitignore  LICENSE  README.md  SpeechScribe.code-workspace  data.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  validate.yml
examples/: basic_usage.py
speechscribe/core/control/: __init__.py  environment.py  model_registry.py  pipeline_plan.py  plan_validator.py  profiles.py  recommender.py
speechscribe/core/delivery/: __init__.py  captions.py  summaries.py  transcripts.py
speechscribe/core/ingestion/: __init__.py  base.py  discord_adapter.py  file_adapter.py  sip_adapter.py  teams_adapter.py  zoom_adapter.py
speechscribe/core/pipeline/: __init__.py  orchestrator.py
speechscribe/core/pipeline/asr/: __init__.py  base.py  whisper_processor.py
speechscribe/core/pipeline/diarization/: __init__.py  base.py  simple_processor.py
speechscribe/core/pipeline/summarization/: __init__.py  base.py  simple_processor.py
speechscribe/core/pipeline/translation/: __init__.py  base.py  simple_processor.py
speechscribe/core/pipeline/tts/: __init__.py  base.py  simple_processor.py
speechscribe/core/utils/: audio.py
src/speechscribe/: __init__.py  __main__.py  audio.py  cli.py  cli_utils.py  config.py  control.py  core.py  delivery.py  ingestion.py  models.py  orchestrator.py  output.py  pipeline.py  platform_cli.py  voice_synthesis.py
src/vmtranscriber/: __init__.py  __main__.py  audio.py  cli.py
tests/: __init__.py  test_control.py
