[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# -------------------------
# Black - code formatter
# -------------------------
[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

# -------------------------
# Flake8 - linter
# -------------------------
[tool.flake8]
# F541 = f-string without placeholders; F401 = unused import; F841 = unused variable; F811 = redefinition
extend-ignore = "E203,W503,E501,F541,F401,F841,F811"
exclude = [
    ".venv",
    "venv",
    "env",
    "build",
    "dist",
    "*.egg-info",
    "examples",
    "setup.py",
]
max-line-length = 88
# -------------------------
# isort - import sorting
# -------------------------
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["your_package_name"]
skip = [".venv", "venv"]

# -------------------------
# pytest - tests
# -------------------------
# Run from repo root: pytest   or  pytest tests/
# Install first: pip install -e .   (or pytest uses pythonpath below)
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

# -------------------------
# Coverage (optional but useful)
# -------------------------
[tool.coverage.run]
branch = true
source = ["your_package_name"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "def __str__",
]
[tool.coverage.html]
directory = "htmlcov"
[tool.coverage.xml]
output = "coverage.xml"
[tool.coverage.json]
output = "coverage.json"
[tool.coverage.lcov]
output = "coverage.lcov"
